<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorBlanco"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_timer"
            android:tint="@color/colorBlanco"
            android:background="@color/colorRojo" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="texto"
            android:gravity="end"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorNegro"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="$100.00"/>

            <View
                android:layout_width="60dp"
                android:layout_height="1dp"
                android:background="@color/colorRojo"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/credito"
                android:textSize="14sp"
                android:textColor="@color/colorTxt"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/desde"
                android:textSize="14sp"
                android:textColor="@color/colorTxt"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/btn_comprar"
        android:textColor="@color/colorBlanco"
        android:background="@drawable/btn_comprar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/colorGris"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

</LinearLayout>